app/components/header/header.module.css
.header {
    height: 100px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 40px;
    border-bottom: 4px solid rgb(144, 144, 144);
    background-color: rgb(227, 225, 225);
    position: relative;
}

.menu {
    font-size: 30px;
    font-weight: bold;
    color: #202121;
    cursor: pointer;
    display: none;
}

.navbar {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.logo {
    display: flex;
    align-items: center;
    font-size: 24px;
    font-weight: bold;
    color: rgb(176, 15, 176);
    gap: 8px;
}

.navLinks {
    margin-left: 30px;
}

.navLink {
    font-size: 20px;
    font-weight: 600px;
    margin: 0 12px;
}

.right {
    display: flex;
    align-items: center;
    gap: 8px;
}

.btn {
    cursor: pointer;
    background-color: blue;
    color: white;
    border-radius: 10px;
    padding: 5px 10px;
    font-size: 21px;
    font-weight: 600;
    display: flex;
    align-items: center;
}

.btn:hover {
    background-color: darkblue;
}

.navLink:hover {
    color: darkblue;
}

@media(max-width: 1080px) {
    .logo {
        display: none;
    }
    .menu {
        display: block;
    }
    .navLinksWrappers {
        position: absolute;
        left: 0%;
        top: 100%;
        width: 100%;
        background-color: inherit;
        transition: all .5s ease-in;
        z-index: 100;
        background-color: rgb(227, 225, 225);
        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
    }
    .navLinks {
        padding-left: 30px;
        padding-top: 10px;
        margin-left: 0px;
        display: flex;
        flex-direction: column;
        align-items: start;
        justify-content: center;
    }
    .navLink {
        padding: 0px;
        margin: 12px 0;
    }
}

